Add patient and doctor profile pages; implement consultation management features; enhance JSP styles and add dashboard functionalities